--- a/style.css
+++ b/style.css
@@ -18,16 +18,17 @@ body {
   height: 100px;
   margin-bottom: 50px;
   padding: 5px 10px;
-  background: #b4b4b4;
   border-radius: 5px;
+  font-size: 18px;
 }
 
 .keyboard {
   width: 751px;
   display: flex;
   flex-wrap: wrap;
-  background: linear-gradient(#3B3B3B, #070707);;
+  background: linear-gradient(#3b3b3b, #070707);;
   border-radius: 5px;
+  margin-bottom: 50px;
   padding: 15px 10px;
 }
 
@@ -36,10 +37,10 @@ body {
   height: 49px;
   margin-right: 5px;
   margin-bottom: 5px;
-  background: linear-gradient(#3B3B3B, #070707);
-  color: #ffffff;
+  background: linear-gradient(#3b3b3b, #070707);
+  color: #ebebeb;
   text-align: center;
-  font-family: sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 14px;
   line-height: 45px;
   border: 2px solid #808080;
@@ -102,4 +103,18 @@ body {
   background: linear-gradient(#878686, #505050);
   transform: translate(1px, 1px);
   transition: all 0.2s ease 0s;
+}
+
+.info {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 16px;
+  line-height: 3;
+}
+
+.shortcut {
+  color: #ececec;
+  background: linear-gradient(rgb(83, 83, 83), #2a2a2a);
+  border-radius: 5px;
+  padding: 8px;
+  font-family: 'Courier New', Courier, monospace;
 }
